--- a/Report/ref.bib
+++ b/Report/ref.bib
@@ -15,23 +15,6 @@ url = {http://ieeexplore.ieee.org/articleDetails.jsp?arnumber=5940480},
 year = {2011}
 }
 
-@inproceedings{Wang2013,
-author = {Wang, Xiaoyu and Yang, Ming and Zhu, Shenghuo and Lin, Yuanqing},
-booktitle = {2013 IEEE International Conference on Computer Vision},
-doi = {10.1109/ICCV.2013.10},
-isbn = {978-1-4799-2840-8},
-issn = {1550-5499},
-keywords = {Boosting,DPM,Deformable models,Deformation,Detection,Feature extraction,ImageNet,ImageNet dataset,Layout,Object Detection,Object detection,PASCAL,PASCAL VOC 2007 dataset,Prototypes,Regionlet,Search problems,Subcategory,VOC 2010,arbitrary resolution,cascaded boosting classifier,deformable part-based model,descriptive object representations,detection mean average precision,detection window,feature extraction,feature extraction region,fine-grained spatial layouts,flexible object representations,generic object detection,image classification,image representation,local regions,multiclass detection benchmark datasets,object bounding box proposal,object categories,object classes,object detection,one-dimensional feature,regionlets,segmentation cues,tractable computations,visual databases},
-language = {English},
-mendeley-groups = {CV},
-month = {dec},
-pages = {17--24},
-publisher = {IEEE},
-title = {{Regionlets for Generic Object Detection}},
-url = {http://ieeexplore.ieee.org/articleDetails.jsp?arnumber=6751111},
-year = {2013}
-}
-
 @article{Long2014,
 author = {Long, J and Shelhamer, E and Darrell, T},
 file = {:Users/zhiconglu/Library/Application Support/Mendeley Desktop/Downloaded/Long, Shelhamer, Darrell - 2014 - Fully convolutional networks for semantic segmentation.pdf:pdf},
@@ -40,30 +23,6 @@ mendeley-groups = {CV},
 title = {{Fully convolutional networks for semantic segmentation}},
 url = {http://arxiv.org/abs/1411.4038},
 year = {2014}
-}
-
-@article{Krizhevsky2012,
-author = {Krizhevsky, A and Sutskever, I and Hinton, GE},
-journal = {Advances in Neural Information Processing Systems 25},
-mendeley-groups = {CV},
-title = {{Imagenet classification with deep convolutional neural networks}},
-url = {http://papers.nips.cc/paper/4824-imagenet-classification-w},
-year = {2012}
-}
-
-@article{Huang2015,
-abstract = {How can a single fully convolutional neural network (FCN) perform on object detection? We introduce DenseBox, a unified end-to-end FCN framework that directly predicts bounding boxes and object class confidences through all locations and scales of an image. Our contribution is two-fold. First, we show that a single FCN, if designed and optimized carefully, can detect multiple different objects extremely accurately and efficiently. Second, we show that when incorporating with landmark localization during multi-task learning, DenseBox further improves object detection accuray. We present experimental results on public benchmark datasets including MALF face detection and KITTI car detection, that indicate our DenseBox is the state-of-the-art system for detecting challenging objects such as faces and cars.},
-archivePrefix = {arXiv},
-arxivId = {1509.04874},
-author = {Huang, Lichao and Yang, Yi and Deng, Yafeng and Yu, Yinan},
-eprint = {1509.04874},
-file = {:Users/zhiconglu/Library/Application Support/Mendeley Desktop/Downloaded/Huang et al. - 2015 - DenseBox Unifying Landmark Localization with End to End Object Detection.pdf:pdf},
-journal = {arXiv},
-mendeley-groups = {CV},
-month = {sep},
-title = {{DenseBox: Unifying Landmark Localization with End to End Object Detection}},
-url = {http://arxiv.org/abs/1509.04874},
-year = {2015}
 }
 
 @inproceedings{Dollar2009,
@@ -93,6 +52,43 @@ url = {http://personal.ie.cuhk.edu.hk/{~}pluo/pdf/tianLWTiccv15.pdf},
 year = {2015}
 }
 
+@article{Krizhevsky2012,
+author = {Krizhevsky, A and Sutskever, I and Hinton, GE},
+journal = {Advances in Neural Information Processing Systems 25},
+mendeley-groups = {CV},
+title = {{Imagenet classification with deep convolutional neural networks}},
+year = {2012}
+}
+
+@inproceedings{Wang2013,
+author = {Wang, Xiaoyu and Yang, Ming and Zhu, Shenghuo and Lin, Yuanqing},
+booktitle = {2013 IEEE International Conference on Computer Vision},
+doi = {10.1109/ICCV.2013.10},
+isbn = {978-1-4799-2840-8},
+issn = {1550-5499},
+language = {English},
+mendeley-groups = {CV},
+month = {dec},
+pages = {17--24},
+publisher = {IEEE},
+title = {{Regionlets for Generic Object Detection}},
+year = {2013}
+}
+
+@article{Huang2015,
+archivePrefix = {arXiv},
+arxivId = {1509.04874},
+author = {Huang, Lichao and Yang, Yi and Deng, Yafeng and Yu, Yinan},
+eprint = {1509.04874},
+file = {:Users/zhiconglu/Library/Application Support/Mendeley Desktop/Downloaded/Huang et al. - 2015 - DenseBox Unifying Landmark Localization with End to End Object Detection.pdf:pdf},
+journal = {arXiv},
+mendeley-groups = {CV},
+month = {sep},
+title = {{DenseBox: Unifying Landmark Localization with End to End Object Detection}},
+url = {http://arxiv.org/abs/1509.04874},
+year = {2015}
+}
+
 % Add by Zhen:
 @inproceedings{van2011segmentation,
   title={Segmentation as selective search for object recognition},
@@ -119,4 +115,47 @@ year = {2015}
   title = {Are we ready for Autonomous Driving? The KITTI Vision Benchmark Suite},
   booktitle = {Conference on Computer Vision and Pattern	Recognition (CVPR)},
   year = {2012}
+}
+
+@article{felzenszwalb2010object,
+  title={Object detection with discriminatively trained part-based models},
+  author={Felzenszwalb, Pedro F and Girshick, Ross B and McAllester, David and Ramanan, Deva},
+  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  volume={32},
+  number={9},
+  pages={1627--1645},
+  year={2010},
+  publisher={IEEE}
+}
+
+@inproceedings{dalal2005histograms,
+  title={Histograms of oriented gradients for human detection},
+  author={Dalal, Navneet and Triggs, Bill},
+  booktitle={Computer Vision and Pattern Recognition, 2005. CVPR 2005. IEEE Computer Society Conference on},
+  volume={1},
+  pages={886--893},
+  year={2005},
+  organization={IEEE}
+}
+
+@article{lowe2004distinctive,
+  title={Distinctive image features from scale-invariant keypoints},
+  author={Lowe, David G},
+  journal={International journal of computer vision},
+  volume={60},
+  number={2},
+  pages={91--110},
+  year={2004},
+  publisher={Springer}
+}
+
+@article{felzenszwalb2004efficient,
+  title={Efficient graph-based image segmentation},
+  author={Felzenszwalb, Pedro F and Huttenlocher, Daniel P},
+  journal={International Journal of Computer Vision},
+  volume={59},
+  number={2},
+  pages={167--181},
+  year={2004},
+  publisher={Springer}
 }
