Report: Zhicong: add regionlet; Zhen: fix some typo and frame

--- a/Report/ref.bib
+++ b/Report/ref.bib
@@ -89,6 +89,15 @@ url = {http://arxiv.org/abs/1509.04874},
 year = {2015}
 }
 
+@inproceedings{Torralba04sharingfeatures:,
+	author = {Antonio Torralba and Kevin P. Murphy and William T. Freeman},
+	title = {Sharing Features: Efficient Boosting Procedures for Multiclass Object Detection},
+	booktitle = {IN CVPR},
+	year = {2004},
+	pages = {762--769},
+	publisher = {}
+}
+
 % Add by Zhen:
 @inproceedings{van2011segmentation,
   title={Segmentation as selective search for object recognition},
