--- a/Report/nips2015.tex
+++ b/Report/nips2015.tex
@@ -5,6 +5,7 @@
 \usepackage{enumerate}
 \usepackage{graphicx} 
 \usepackage{subfigure}
+\usepackage{amsmath}
 %\documentstyle[nips14submit_09,times,art10]{article} % For LaTeX 2.09
 
 
@@ -65,26 +66,25 @@ In this project, we focus on the performance of SVM, Regionlets \cite{Wang2013},
 
 % Other old paragraph moved to conclusion section
 
-\section{Related Work}
+\section{Related work}
 
-Object detection, especially cars and pedestrains detecions for autonomous driving systems, has been a hot topic in computer vision for recent years. In many tasks, since the number of images and windows to evaluate is huge, we often rely on a weak classifier to get proposals for the more expensive classifier. Selective Search \cite{van2011segmentation} is a successful algorithm, which emphasize recall to include all image fragments of potential relevance. It can be combined with many feature representation techniques, such as the histograms of oriented gradients (HOG) \cite{dalal2005histograms}, and SIFT \cite{lowe2004distinctive}. 
+The object detection, especially cars and pedestrians detection for the autonomous driving system, has been a hot topic in computer vision for recent years. In many tasks, since the number of images and windows to evaluate is huge, we often rely on a weak classifier to get proposals for the more expensive classifier. Selective Search \cite{van2011segmentation} is a successful algorithm, which emphasize recall to include all image fragments of potential relevance. It can be combined with many feature representation techniques, such as the histograms of oriented gradients (HOG) \cite{dalal2005histograms}, and SIFT \cite{lowe2004distinctive}. 
 
-[TODO: introduce regionlets]
+[TODO: introduce Regionlets]
 
-Convolutional Neural
-Network (CNN or ConvNet) \cite{Krizhevsky2012} is able to learn the features of the object and handle variations such as poses, viewpoints, and lightings, with high accuracy and high efficiency. However, it doesn't perform well when occlusion occurs, which is often the case in pedestrian and cyclists detection. 
+Convolutional Neural Network (CNN or ConvNet) \cite{Krizhevsky2012} is able to learn the features of the object and handle variations such as poses, viewpoints, and light conditions, with high accuracy and high efficiency. However, it doesn't perform well when occlusion occurs, which is often the case in pedestrian and cyclists detection. 
 
 Recently, the Fully Convolutional Neural Network (FCN) based methods[5], with end-to-end approach of learning model parameters and image features, further improves the performance of object detection. DenseBox \cite{Huang2015} is a unified end-to-end FCN that
 directly predicts bounding boxes and object class confidences through all locations
-and scales of an image with great accuracy and efficiancy. It also incorporates with landmark localization during multi-task learning and further improves
-object detection accuracy. It has the best accuracy on car detection on KITTI by the time the proposal is finished. However, it has not been tested on the tasks of pedestrain or cyclists detection.
+and scales of an image with great accuracy and efficiency. It also incorporates with landmark localization during multitask learning and further improves
+object detection accuracy. It has the best accuracy on car detection on KITTI by the time the proposal is finished. However, it has not been tested on the tasks of pedestrian or cyclists detection.
 
 Felzenszwalb et al \cite{felzenszwalb2010object} combined a margin-sensitive approach for data-mining hard negative samples, which can be used by iteratively adding hard negative examples (false positive errors) \cite{van2011segmentation}.
 
-
 \section{Methods}
 
-\subsection{Object Detection System}
+\subsection{Object detection system}
+
 
 \begin{figure}[htb]
 \begin{subfigure}
@@ -101,6 +101,7 @@ Felzenszwalb et al \cite{felzenszwalb2010object} combined a margin-sensitive app
 \label{fig:pipeline}}
 \end{figure}
 
+
 The whole architecture of our detection system is illustrated in Figure \ref{fig:pipeline}. In the training procedure, cropped images with ground truth labels are utilized to train the initial model. After validation, false positive errors are added to the negative samples, which iteratively focus on harder examples. 
 
 In the testing procedure, there are mainly two steps in our detection procedure: 
@@ -111,62 +112,73 @@ In the testing procedure, there are mainly two steps in our detection procedure:
 
 We use the Selective Search \cite{van2011segmentation} as the common weak classifier. For the strong classifier after it, we use SVM, Regionlets, and CNN.
 
-\subsection{Ground Truth Generation}
+\subsection{Image multiplication for ground truth generation}
 \label{sec:positive}
 
 In training, image segments of cars and pedestrians are cropped and resized to $64 \times 64$, according to the corresponding labels. Then we adjust the original image by adding a random bias to the histogram map (from $-20\%$ to $+20\%$) repeatedly. We also reverse the original image horizontally to make full use of the training set. This adjustment will not only balance the different light conditions in the original images, but also make full use of the hidden information. 
 
-\subsection{Negative Samples Generation}
+\subsection{Selective Search for negative samples generation}
 
 We use the Selective Search \cite{van2011segmentation} to generate the negative samples. Selective Search is a segmentation algorithm that focus on recall rate and ensure its results do not stem from parameter tuning. It starts from initial regions generated by \cite{felzenszwalb2004efficient}, and use a greedy algorithm to repeatedly merge similar segments. The similarity function is defined to combine the size similarity, by calculating the fraction of joint area, and the texture similarity, by calculating the histogram intersection.
 
-We randomly select images from the training set, run Selective Search, and find out background segments, which are definded to have a $0\%$ to $30\%$ overlap with a positive sample (car or pedestrian). We generate $20000$ negative samples for training. 
+We randomly select images from the training set, run Selective Search, and find out background segments, which are defined to have a $0\%$ to $30\%$ overlap with a positive sample (car or pedestrian). We generate $20000$ negative samples for training. 
 
-\subsection{Retrain Procedure}
+\subsection{Retrain procedure}
 
 Generating the negative samples is a important part of road object detection, since the background textures are too complicated to cluster easily. Too enhance the model's ability to solve hard problems, we add retrain procedure \cite{felzenszwalb2010object} to iteratively adding false positive errors to the negative sample set.
+
+
+\subsection{Regionlets with Adaboost for generic object detection}
+
+To try some different features as well as different classifiers, we implemented Regionlets \cite{Wang2013} for generic object detection to compare with the SVM classifier. We also use Selective Search \cite{van2011segmentation} to get candidate bounding boxes which may contain target object, and classify the candidate boxes with the boosted classifiers.
+
+
+\begin{figure}[htb]
+	\centering
+	\includegraphics[width=6cm]{regionlets_def.png}
+	\caption{Illustration of Regionlets definition}
+	\label{fig:regionlet_def}
+\end{figure}
+
+
+\subsubsection{Regionlet definition}
+
+Regionlets are defined as sub-parts of a region in the image. They are introduced to act as basic units to extract appearance features, and are organized into small groups to describe features with different degrees of deformation \cite{Wang2013}. In this way, features extracted from small regions and a big region can work together, which can provide a good localization ability as well as tolerate more variations.
+
+Figure \ref{fig:regionlet_def} shows the definition of regionlets. The outer black rectangle is a candidate bounding box. The blue rectangle inside the bounding box is a feature extraction region denoted as $R$, which will contribute a weak classifier to the boosting classifier. Within the region $R$, some small sub-regions are selected and defined as a group of regionlets, as shown in Figure \ref{fig:regionlet_def}. The features of these regionlets will be aggregated to a single feature for a region $R$ during training, and a bounding box will be represented by a number of such regions.
+
+By introducing regionlets, it is straightforward to think that it would improve object recognition especially for occluded situations, which are common in automated driving, because the discerning features are extracted while irrelevant appearance from background is largely discarded. Besides, more regionlets in a single region $R$ will increase the capacity to model deformations.
+
+
+\subsubsection{Regionlet feature extraction}
+
+According to \cite{Wang2013}, feature extraction from $R$ takes 2 steps. First, we extract appearance features of HOG descriptors \cite{dalal2005histograms} from each regionlets respectively. Second, we generate the representation of R based on regionlet’s features. We apply max-pooling over regionlet features for the feature of region $R$. Denote $T(R)$ as the feature representation for region $R$, $T(r_j)$ as the feature extracted from the $jth$ region $r_j$ in $R$, then the operation is defined as follows:
+
+\begin{equation*}
+T(R) = \max \limits_j T(r_j)
+\end{equation*}
+
+The max-pooling happens for each feature dimension independently. For each regionlet, we first extract HOG feature for the regionlet. Then we pick a 1D feature from the same dimension of HOG feature in each regionlet and apply max-pooling to get the feature for region R. We have millions of such 1D features in a detection window and the most discriminative ones are determined through a boosting learning process.
+
+\subsubsection{Training with boosting Regionlet features}
+\label{training_regionlets}
+
+We use the ensemble method of boosting to learn the discriminative regionlet groups and their configurations from a huge pool of candidate regions and regionlets.
+
+To deal with deformation at different scales, we first build a largely over-complete pool for regions and regionlets with various positions, aspect ratios and sizes, as in \cite{Wang2013}. 
+We denote the 1D feature of a region relative to a bounding box as $R'= (l', t', r', b', k)$, where $k$ denotes the $k$-th element of the low-level feature vector (HOG features) of the region. The region pool is spanned by $X \times Y \times W \times H \times F$, where $X$ and $Y$ are respectively the space of horizontal and vertical position of region $R'$ in the detection window, $W$ and $H$ are the width and height of the region $R'$, and $F$ is the space of HOG feature. Enumerating all possible regions is impractical and not necessary. We employ a sampling process to reduce the pool size. The algorithm is the same as Algorithm 1 in \cite{Wang2013}.
+
+After getting the region pool, we propose a set of regionlets with random positions inside each region. Although the sizes of regionlets in a region could be arbitrary in general, we restrict regionlets in a group to have the identical size because the regionlets are designed to capture the same appearance in different possible locations due to deformation\cite{Wang2013}. The sizes of regionlets in different groups could be different. A region contains 5 regionlets in our implementation.
+
+The final feature space used as the feature pool for boosting is spanned by $R \times C$, where $R$ is the region feature prototype space and $C$ is the configuration space of regionlets.
+
+We use Gentle Adaboost \cite{Torralba04sharingfeatures:} to train classifiers for our object detector. One boosting classifier consists of a set of selected weak classifiers. We define the weak classifier as a decision tree. Gentle Adaboost puts less weight on outlier data points, which would make the classifiers more robust.
 
 \section{Experiments}
 
 \subsection{Data set}
 
 We use the KITTI data set for Object Detection \cite{Geiger2012CVPR}, which contains $7481$ color images with ground truth bounding box labels, including $28782$ cars and $4487$ pedestrians. We partition the data set to a training set contains $5237$ images($70\%$), and a testing set contains $2244$ images($30\%$). Then we run different algorithms on the data set and analyze the results.
-
-\subsection{Regionlets}
-
-TODO: modify format, add subsection title, add reference(I have add the ref.bib file, so we can use the auto-ref now), and change math font
-
-Regionlets with Adaboost for generic object detection
- 
-To try some different features as well as different classifiers, we implemented regionlets for generic object detection [] to compare with the SVM classifier. We also use selective search to get candidate bounding boxes which may contain target object, and classify the candidate boxes with the learned classifier.
- 
-Regionlets
- 
-Regionlet defination
-Regionlets are defined as sub-parts of a region in the image. They are introduced to act as basic units to extract appearance features, and are organized into small groups to describe features with different degrees of deformation. In this way, features extracted from small regions and a big region can work together, which can provide a good localization ability as well as tolerate more variations.
-Figure [] shows the definition of regionlets. The outer black rectangle is a candidate bounding box. The blue rectangle inside the bounding box is a feature extraction region denoted as R, which will contribute a weak classifier to the boosting classifier. Within the region R, some small sub-regions are selected and defined as a group of regionlets, as shown in Figure []. The features of these regionlets will be aggregated to a single feature for a region R during training, and a bounding box will be represented by a number of such regions.
-By introducing regionlets, it is straightforward to think that it would improve object recognition especially for occluded situations, which are common in automated driving, because the discerning features are extracted while irrelevant appearance from background is largely discarded. Besides, more regionlets in a single region R will increase the capacity to model deformations.
- 
-Region feature extraction
-According to [], feature extraction from R takes 2 steps. First, we extract appearance features of HOG descriptors from each regionlets respectively. Second, we generate the representation of R based on regionlet’s features. We apply max-pooling over regionlet features for the feture of region R. Denote T(R) as the feature representation for region R, T(rj) as the feature extracted from the jth regionlet rj in R, then the operation is defined as follows:
-T(R) = max T(rj)
-The max-pooling happens for each feature dimension independently. For each regionlet, we first extract HOG feature for the regionlet. Then we pick a 1D feature from the same dimension of HOG feature in each regionlet and apply max-pooling to get the feature for region R. We have millions of such 1D features in a detection window and the most discriminative ones are determined through a boosting learning process.
- 
-Leaning the object detection model
-We use the ensamble method of boosting to learn the discriminative regionlet groups and their configurations from a huge pool of candidate regions and regionlets.
- 
-Regionlets pool construction
-To deal with deformation at different scales, we first build a largely over-complete pool for regions and regionlets with various positions, aspect ratios and sizes. 
-we denote the 1D feature of a region relative to a bounding box as R’= (l’, t’, r’, b’, k), where k denotes the kth element of the low-level feature vector of the region. The region pool is spanned by X × Y × W × H × F, where X and Y are respectively the space of horizontal and vertical anchor position of R in the detection window, W and H are the width and height of the feature extraction region R’, and F is the space of HOG feature. Enumerating all possible regions is impractical and not necessary. We employ a sampling process to reduce the pool size. The algorithm is the same as Algorithm 1 in [].
- 
-After getting the region pool, we propose a set of regionlets with random positions inside each region. Although the sizes of regionlets in a region could be arbitrary in general, we restrict regionlets in a group to have the identical size because our regionlets are designed to capture the same appearance in different possible locations due to deformation. The sizes of regionlets in different groups could be different. A region may contain up to 5 regionlets in our implementation.
- 
-The final feature space used as the feature pool for boosting is spanned by R × C, where R is the region feature prototype space and C is the configuration space of regtionlets.
- 
-Training with boosting regionlet features
- 
-We use Gentle Adaboost[] to train classifiers for our object detector. One boosting classifier consists of a set of selected weak classifers. We define the weak classifier as a decision tree. Gentle Adaboost puts less weight on outlier data points, which would make the classifiers more robust.
-
 
 \subsection{SVM}
 
@@ -180,6 +192,7 @@ The SVM classifier is trained using the cropped positive samples with ground tru
 
 We use the k-fold ($k=7$) cross validation to evaluate our model, as required by the project guide ($60\%$ training, $10\%$ validation, and $30\%$ testing). According to our description in Section \ref{sec:positive}, we multiply the data set by changing the contrast and brightness of the images, as well as reversing the images horizontally. Then we can compare the cross loss before and after the multiplication, using the \texttt{crossval} function from the MATLAB toolbox.
 
+
 \begin{figure}[htb]
 \begin{center}
 %\framebox[4.0in]{crossloss.eps}
@@ -190,6 +203,7 @@ We use the k-fold ($k=7$) cross validation to evaluate our model, as required by
 \label{fig:crossloss}}
 \end{figure}
 
+
 We can observe from Figure \ref{fig:crossloss} that the cross loss gets lower when we multiply the data set from $13908$ samples ($11288$ cars and $2620$ pedestrians) to $43536$ samples ($22576$ cars and $20960$ pedestrians). With this trick, we can make full use of the limited data set when we lack certain classes of objects. On the other hand, this trick also helps to balance the different light conditions among the images by adding random brightness bias. The final cross loss range from $2.75\%$ to $6.65\%$, which is satisfying. 
 
 In addition to the randomly selected negative samples ($N_1=20000$), we add retrain step to enhance the training procedure. Though the number of positive samples is limited by the training set, we can crop much more negative samples from the existing images. But we need to balance that with the training cost. To be more effective, we save the false positive image segments to files during the validation, and add these images to the training set, labeled as the background image. These are considered to be the hard samples ($N_2=10500$), so finally we have $30500$ negative samples.
@@ -198,17 +212,20 @@ In addition to the randomly selected negative samples ($N_1=20000$), we add retr
 
 First we can test on the cropped testing set to evaluate the object recognition performance. Similarly, we can compare the different accuracy, precision, and recall rate we got before the image multiplication and after the image multiplication. We use the \texttt{predict} function from the MATLAB toolbox to classify with our trained SVM models.
 
+
 \begin{figure}[htb]
 \begin{center}
 %\framebox[4.0in]{crossloss.eps}
 \includegraphics[width=\textwidth]{test_apr.eps}
 %\fbox{\rule[-.5cm]{0cm}{4cm} \rule[-.5cm]{4cm}{0cm}}
 \end{center}
-\caption{Accuracy, precision, and recall rate before and after the image multiplication.
+\caption{Accuracy, precision, and recall rate of the 3 classifiers (Car vs All, Pedestrian vs All, and Car vs Pedestrian) on the object recognition task before and after the image multiplication.
 \label{fig:test_apr}}
 \end{figure}
 
-From Figure \ref{fig:test_apr}, we can conclude that multiplying images will also increase the accuracy, precision, and recall rate. Using $43536$ positive samples and $20000$ negative samples, we obtain a precision rate range from $92.96\%$ to $98.26\%$ and a recall rate range from $88.72\%$ to $96.56\%$. It is reasonable to consider that if we collect more training data or multiply more images with existing data, we will be able to get better performance. But that will also leads to more expensive training and testing cost. 
+
+From Figure \ref{fig:test_apr}, we can conclude that multiplying images will also increase the accuracy, precision, and recall rate. Using $43536$ positive samples and $20000$ negative samples, we obtain a precision rate range from $92.96\%$ to $98.26\%$ and a recall rate range from $88.72\%$ to $96.56\%$. It is reasonable to consider that if we collect more training data or multiply more images with existing data, we will be able to get better performance. But that will also leads to more expensive training and testing cost. Anyway, we observe a good performance of Selective Search + SVM on the object recognition task.
+
 
 \begin{figure}[htb]
 \begin{subfigure}
@@ -221,11 +238,16 @@ From Figure \ref{fig:test_apr}, we can conclude that multiplying images will als
     \includegraphics[width=.9\linewidth]{toosmall2.eps}
     \label{fig:toosmall2}
 \end{subfigure}
-\caption{Red bounding box is output result of the classifier, and the green bounding box is the ground truth. Top: Found the two big cars on the right, but lost other two small cars in the middle. Bottom: Found the cyclist on the left, but lost the small car in the middle.
+\caption{Red bounding box is output result of the final detector, and the green bounding box is the ground truth. Top: Found the two big cars on the right, but lost other two small cars in the middle. Bottom: Found the cyclist on the left, but lost the small car in the middle.
 \label{fig:toosmall}}
 \end{figure}
 
+
 However, it doesn't perform well on the real test set, especially when the cars are small enough. We can observe from Figure \ref{fig:toosmall} that the proposals are relatively big compared to the small cars. However, if we decrease the expected size of bounding box, we will miss the big car that close to the observer. 
+
+\subsection{Regionlets feature boosting}
+
+The training of the classifiers for regionlets features is described in Section \ref{training_regionlets}. Since we use one-split decision tree as the weak classifier, the classifiers we get is binary. We again trained 3 classifiers: (1) Car vs All, (2) Pedestrian vs All, and (3) Car vs Pedestrian. We used Gentle Adaboost Algorithm[] to get boosted classifiers. The training set is preprocessed in the same way as SVM. 
 
 \subsection{CNN}
 
